--- a/composer.json
+++ b/composer.json
@@ -1,9 +1,14 @@
 {
-    "name": "laravel/lumen",
-    "description": "The Laravel Lumen Framework.",
-    "keywords": ["framework", "laravel", "lumen"],
-    "license": "MIT",
+    "name": "edumarques/pw-api",
+    "description": "Personal website's API",
+    "keywords": ["personal", "website", "api", "page", "lumen", "laravel"],
     "type": "project",
+    "authors": [
+        {
+            "name": "Eduardo Marques",
+            "email": "eduardomarqs1@gmail.com"
+        }
+    ],
     "require": {
         "php": "^7.3|^8.0",
         "laravel/lumen-framework": "^8.0"
@@ -11,7 +16,9 @@
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
         "mockery/mockery": "^1.3.1",
-        "phpunit/phpunit": "^9.3"
+        "phpstan/phpstan": "^0.12.82",
+        "phpunit/phpunit": "^9.3",
+        "squizlabs/php_codesniffer": "^3.5"
     },
     "autoload": {
         "psr-4": {
