--- a/composer.json
+++ b/composer.json
@@ -1,47 +1,77 @@
 {
-    "name": "edumarques/pw-api",
-    "description": "Personal website's API",
-    "keywords": ["personal", "website", "api", "page", "lumen", "laravel"],
-    "type": "project",
-    "authors": [
-        {
-            "name": "Eduardo Marques",
-            "email": "eduardomarqs1@gmail.com"
-        }
-    ],
-    "require": {
-        "php": "^7.3|^8.0",
-        "laravel/lumen-framework": "^8.0"
-    },
-    "require-dev": {
-        "fakerphp/faker": "^1.9.1",
-        "mockery/mockery": "^1.3.1",
-        "phpstan/phpstan": "^0.12.82",
-        "phpunit/phpunit": "^9.3",
-        "squizlabs/php_codesniffer": "^3.5"
-    },
-    "autoload": {
-        "psr-4": {
-            "App\\": "app/",
-            "Database\\Factories\\": "database/factories/",
-            "Database\\Seeders\\": "database/seeders/"
-        }
-    },
-    "autoload-dev": {
-        "classmap": [
-            "tests/"
-        ]
-    },
-    "config": {
-        "preferred-install": "dist",
-        "sort-packages": true,
-        "optimize-autoloader": true
-    },
-    "minimum-stability": "dev",
-    "prefer-stable": true,
-    "scripts": {
-        "post-root-package-install": [
-            "@php -r \"file_exists('.env') || copy('.env.example', '.env');\""
-        ]
+  "name": "edumarques/pw-api",
+  "description": "Personal website's API",
+  "keywords": [
+    "personal",
+    "website",
+    "api",
+    "page",
+    "lumen",
+    "laravel"
+  ],
+  "type": "project",
+  "authors": [
+    {
+      "name": "Eduardo Marques",
+      "email": "eduardomarqs1@gmail.com"
     }
+  ],
+  "require": {
+    "php": "^8.0|^7.3",
+    "guzzlehttp/guzzle": "^7.2",
+    "http-interop/http-factory-guzzle": "^1.0",
+    "knplabs/github-api": "^3.1",
+    "laravel/lumen-framework": "^8.0"
+  },
+  "require-dev": {
+    "fakerphp/faker": "^1.9.1",
+    "mockery/mockery": "^1.3.1",
+    "phpstan/phpstan": "^0.12.82",
+    "phpunit/phpunit": "^9.3",
+    "squizlabs/php_codesniffer": "^3.5"
+  },
+  "autoload": {
+    "psr-4": {
+      "App\\": "app/",
+      "Database\\Factories\\": "database/factories/",
+      "Database\\Seeders\\": "database/seeders/"
+    }
+  },
+  "autoload-dev": {
+    "psr-4": {
+      "Tests\\": "tests/"
+    }
+  },
+  "config": {
+    "preferred-install": "dist",
+    "sort-packages": true,
+    "optimize-autoloader": true
+  },
+  "minimum-stability": "dev",
+  "prefer-stable": true,
+  "scripts": {
+    "post-root-package-install": [
+      "@php -r \"file_exists('.env') || copy('.env.example', '.env');\""
+    ],
+    "serve-dev": "php -S localhost:8000 -t public",
+    "test-coverage": [
+      "@putenv XDEBUG_MODE=coverage",
+      "vendor/phpunit/phpunit/phpunit --coverage-text"
+    ],
+    "test-coverage-functional": [
+      "@putenv XDEBUG_MODE=coverage",
+      "vendor/phpunit/phpunit/phpunit --testsuite Functional --coverage-text"
+    ],
+    "test-coverage-unit": [
+      "@putenv XDEBUG_MODE=coverage",
+      "vendor/phpunit/phpunit/phpunit --testsuite Unit --coverage-text"
+    ],
+    "test-coverage-report": [
+      "@putenv XDEBUG_MODE=coverage",
+      "vendor/phpunit/phpunit/phpunit --coverage-clover coverage/logs/clover.xml --coverage-html coverage/coverage"
+    ],
+    "test": "vendor/phpunit/phpunit/phpunit",
+    "test-functional": "vendor/phpunit/phpunit/phpunit --testsuite Functional",
+    "test-unit": "vendor/phpunit/phpunit/phpunit --testsuite Unit"
+  }
 }
